<resources>
    <string name="app_name">prototype</string>
    <string name="hint_Id">이메일 입력</string>
    <string name="hint_Pwd">비밀번호 입력</string>
    <string name="action_login">로그인</string>
    <string name="create_Id">회원가입</string>
    <string name="find_Id">아이디 찾기</string>
    <string name="find_Pwd">비밀번호 찾기</string>

    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>