<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.kmskt.prototype.login.LoginViewModel" />
        <variable
            name="activity"
            type="com.kmskt.prototype.login.LoginActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:contex=".LoginActivity">

        <!-- 이메일 비밀번호 입력 레이아웃-->
        <LinearLayout
            android:id="@+id/layout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="175dp"
            android:layout_marginStart="@dimen/login_outside"
            android:layout_marginEnd="@dimen/login_outside"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >
            <!-- 이메일 입력 칸-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Id"
                app:endIconMode="clear_text" >
                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={viewModel.id}"
                    android:id="@+id/edittext_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- 비밀번호 입력 칸-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Pwd"
                app:endIconMode="clear_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={viewModel.password}"
                    android:id="@+id/edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- 자동 로그인 체크박스 -->
        <CheckBox
            android:id="@+id/btn_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:text="자동 로그인"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/layout_text"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- 이메일 로그인 버튼 -->
        <androidx.appcompat.widget.AppCompatButton
            android:onClick="@{() -> viewModel.loginEmail()}"
            android:id="@+id/btn_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_outside"
            android:layout_marginEnd="@dimen/login_outside"
            android:text="@string/action_login"
            android:layout_marginTop="5dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/btn_auto_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- 회원가입,아이디,비밀번호 찾기 -->
        <LinearLayout
            android:id="@+id/layout_login"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/btn_email_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <!-- 회원가입 버튼 -->
            <androidx.appcompat.widget.AppCompatButton
                android:onClick="@{() -> activity.signupEmail()}"
                android:id="@+id/btn_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_outside"
                android:layout_marginEnd="@dimen/login_inside"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/create_Id" />
            <!-- 아이디 버튼-->
            <androidx.appcompat.widget.AppCompatButton
                android:onClick="@{() -> activity.findId()}"
                android:id="@+id/btn_findId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_inside"
                android:layout_marginEnd="@dimen/login_inside"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/find_Id" />
            <!-- 비밀번호 버튼-->
            <androidx.appcompat.widget.AppCompatButton
                android:onClick="@{() -> activity.findPwd()}"
                android:id="@+id/btn_findPwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/login_inside"
                android:layout_marginEnd="@dimen/login_outside"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/find_Pwd" />
        </LinearLayout>
        <!-- 카카오 버튼 -->
        <ImageButton
            android:id="@+id/ibtn_kakao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:background="@android:color/transparent"
            android:src="@drawable/kakao_login_medium_wide"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/layout_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>